UPDATE MOBILE CSS

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -32,12 +32,58 @@ and (max-device-width : 480px) {
 @media only screen
 and (min-width : 321px) {
 	/* Styles */
+	#checkin {
+		width: 302px;
+		height: 167px;
+		margin: 0 auto;
+		border: 1px solid #FF0000;
+		background-color: #3366CC;
+		text-align: center;
+		line-height: 25px;
+	}
+	
+	#checkin > form {
+		width: 260px;
+		height: 125px;
+		margin: 0 auto;
+		border: 1px dashed #FFFFFF;
+		background-color: #FF6633;
+	}
+	
+	#checkin > form > table > tr {
+		width: 260px;
+		height: 25px;
+		border: 1px dotted #000000;
+	}
 }
 
 /* Smartphones (portrait) ----------- */
 @media only screen
 and (max-width : 320px) {
 	/* Styles */
+	#checkin {
+		width: 302px;
+		height: 167px;
+		margin: 0 auto;
+		border: 1px solid #FF0000;
+		background-color: #3366CC;
+		text-align: center;
+		line-height: 25px;
+	}
+	
+	#checkin > form {
+		width: 260px;
+		height: 125px;
+		margin: 0 auto;
+		border: 1px dashed #FFFFFF;
+		background-color: #FF6633;
+	}
+	
+	#checkin > form > table > tr {
+		width: 260px;
+		height: 25px;
+		border: 1px dotted #000000;
+	}
 }
 
 /* iPads (portrait and landscape) ----------- */
